chore(dependencies): add NullAway